tests/e2e/scope_individual_try_catch.error
Error: syntax error in story at line 3, column 6

3|    catch
           ^

E0053: Unexpected end of line. Expected: ['_AS'].
