tests/e2e/scope_individual_try_catch.story
try
    c = 1
catch
    d = 1
finally
    e = 1
c = "2"
d = "2"
e = "2"
